refactor: use astro content

--- a/src/pages/[lang]/blog/[slug].astro
+++ b/src/pages/[lang]/blog/[slug].astro
@@ -2,7 +2,7 @@
 import SiteLayout from "../../../layouts/SiteLayout.astro";
 import ArticleBlock from "@/components/blocks/article-1.astro";
 import { getBlogPosts, getPost } from "@/lib/content";
-import { renderMarkdown } from "@/lib/markdown";
+import { renderMarkdown } from "@/lib/text";
 import { t } from "@/lib/i18n";
 import { staticPathsForSlugs, type Lang } from "@/lib/lang";
 
