--- a/src/pages/[lang]/faq.astro
+++ b/src/pages/[lang]/faq.astro
@@ -3,7 +3,7 @@ import SiteLayout from "../../layouts/SiteLayout.astro";
 import FAQBlock from "@/components/blocks/faqs-3.astro";
 import EmptyState from "@/components/blocks/empty-state-1.astro";
 import { getFaq, getPage } from "@/lib/content";
-import { stripMarkdown, renderMarkdown } from "@/lib/markdown";
+import { stripMarkdown, renderMarkdown } from "@/lib/text";
 import { t } from "@/lib/i18n";
 import { staticPathsForLang, type Lang } from "@/lib/lang";
 
