--- a/src/pages/[lang]/services/[slug].astro
+++ b/src/pages/[lang]/services/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import SiteLayout from "../../../layouts/SiteLayout.astro";
 import { getService, getServices } from "@/lib/content";
-import { renderMarkdown } from "@/lib/markdown";
+import { renderMarkdown } from "@/lib/text";
 import { staticPathsForSlugs, type Lang } from "@/lib/lang";
 
 export const prerender = true;
