--- a/src/pages/[lang]/testimonials.astro
+++ b/src/pages/[lang]/testimonials.astro
@@ -3,7 +3,7 @@ import SiteLayout from "../../layouts/SiteLayout.astro";
 import ReviewsBlock from "@/components/blocks/reviews-1.astro";
 import EmptyState from "@/components/blocks/empty-state-1.astro";
 import { getPage, getTestimonials } from "@/lib/content";
-import { renderMarkdown } from "@/lib/markdown";
+import { renderMarkdown } from "@/lib/text";
 import { t } from "@/lib/i18n";
 import { staticPathsForLang, type Lang } from "@/lib/lang";
 
