--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -1,7 +1,7 @@
 ---
 import SiteLayout from "../../layouts/SiteLayout.astro";
 import { Section, SectionProse } from "@/components/ui/section";
-import { renderMarkdown } from "@/lib/markdown";
+import { renderMarkdown } from "@/lib/text";
 import { getPage } from "@/lib/content";
 import { staticPathsForLang, type Lang } from "@/lib/lang";
 
